--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,9 @@
     "minimum-stability": "dev",
     "require": {
         "php": "^8.2",
-        "illuminate/support": "^10.0|^11.0"
+        "illuminate/support": "^10.0|^11.0|^12.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^8.0|^9.0"
+        "orchestra/testbench": "^8.0|^9.0|^10.0"
     }
 }
